--- a/src/components/board/board.css
+++ b/src/components/board/board.css
@@ -1,19 +1,97 @@
 #main{
-    height: 90%;
     width: 75%;
-    margin-left: 50px;
+    margin-left: 6%;
     margin-top: 30px;
     background-color: white;
     border-radius: 10px;
+    display: flex;
+    padding: 10px;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
 }
 
 .data{
-    height: 200px;
-    width: 200px;
-    text-align: center;
+    width: 225px;
     padding: 20px;
     border-radius: 8px;
     margin: 10px;
-    margin-bottom: -20px; 
     background-color: grey;
+    display: flex;
+    /* align-items: center;
+    align-content: center; */
+    box-shadow: 10px, 10px, 19px, solid grey ;
+    position: relative;
+
+}
+
+
+.data:hover{
+    cursor: pointer;
+    box-shadow: 0 15px 20px rgba(0, 0, 0, 0.3);
+}
+
+/* .data:active{
+    background-color: gray;
+} */
+
+.data > h1{
+    font-size: 60px;
+    color: white;
+    font-family: 'Open Sans', sans-serif;
+    position: absolute;
+    bottom: 15px;
+}
+
+.data > h3{
+    font-size: 11px;
+    color: white;
+    font-family: 'Lato', sans-serif;
+    margin: auto;
+    font-weight: 600;
+    position: absolute;
+    bottom: 10px;
+}
+
+.data > i{
+    font-size: 20px;
+}
+
+.data:nth-child(1) {
+    background-color: rgba(246, 117, 47, 0.322);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
+}
+
+.data:nth-child(2) {
+    background-color: rgba(8, 121, 250, 0.438);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
+}
+
+.data:nth-child(3) {
+    background-color: rgba(246, 117, 47, 0.322);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
+}
+
+.data:nth-child(4) {
+    background-color: rgba(8, 121, 250, 0.438);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
+}
+
+.data:nth-child(5) {
+    background-color: rgba(246, 117, 47, 0.322);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
+}
+
+
+.data:nth-child(6) {
+    background-color: rgba(8, 121, 250, 0.438);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
+}
+.data:nth-child(7) {
+    background-color: rgba(246, 117, 47, 0.322);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
+}
+
+.data:nth-child(8) {
+    background-color: rgba(8, 121, 250, 0.438);
+    background-image: linear-gradient(to bottom, rgba(2,9,4,0.0), rgba(9,0,5,0.7)), url(../../Assets/award.png);
 }
